--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "framer-motion": "^11.0.0",
     "gsap": "^3.13.0",
     "next": "^14.2.5",
+    "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.17",
